# neuro

./: .gitignore  LICENSE  README.md  pyproject.toml
_neurodatagen/: gen_spiketimes.py  gen_waveforms.py  load_waveforms.py  pyproject.toml
benchmarks/: 230809_real-data.ipynb  README.md  asv.conf.json  benchmark_analysis.ipynb  create_data.py  create_data.yml  create_ephys_data.ipynb  create_miniscope_data.py  create_miniscope_data_env.yml
benchmarks/benchmarks/: base.py  bokeh_example.py  debug_minimal_examples.py  imagestack_example.py  multitimeseries_example.py  panel_holoviews_example.py  timeseries.py
blog/czi_r5/: index.md
eeg-viewer/: environment.yml  readme_eeg-viewer.md
eeg-viewer/dev/: test_MNE_qt_browser.py  (+2 more)
ephys/: environment.yml
ephys-viewer/: environment.yml  readme_ephys-viewer.md
imaging/: environment.yml
mne-eeg-viewer/: environment.yml
notebooks/: MNE_Qt_EEG_browser.ipynb
scripts/: load_data.py  simdata.py  spike_raster.py
spike-raster/: environment.yml  readme_spike-raster.md
src/neurodatagen/: LICENSE.txt  README.md  pyproject.toml
src/neurodatagen/neurodatagen/: annotations.py
src/neurodatagen/neurodatagen/ca_imaging/: gen_miniscope.py
src/neurodatagen/neurodatagen/eeg/: __init__.py  gen_eeg.py  gen_eeg_mne.py
src/neurodatagen/neurodatagen/ephys/: gen_ephys.py  gen_spiketimes.py  gen_waveforms.py  load_waveforms.py
src/neurodatagen/neurodatagen/imaging/: __init__.py  gen_miniscope.py
video-viewer/: environment.yml  readme_video-viewer.md  workflow_video-viewer.ipynb
waveform/: environment.yml  readme_waveform.md
(+219 files in other folders)
