[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neurodatagen"
version = "0.1.0a4"
description = "Neuroscience data generation"
authors = [
  {name = "Demetris Roumis", email = "8qdo8efl3@mozmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "mne",
    "neurodsp",
    "pandas",
    "dask",
    "sparse",
    "xarray",
    "scipy"
]